# colab-phage-assembly

./: .gitignore  README.md  pipeline.ipynb  pyproject.toml
.github/workflows/: test.yml
src/boilerplate/: core.py  logging.py  utils.py  widget.js  widget.py
src/pipeline/: __init__.py  pipeline.py  widget.py
test/: test_pipeline.py
